objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeAddress__c</fullName>
        <label>HomeAddress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Patient</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Date_Of_Birth_After_1900</fullName>
        <active>false</active>
        <description>Patient's date of birth must be greater than or equal to 1st January 1900</description>
        <errorConditionFormula>Date_of_Birth__c  &gt;=  DATE(1900,01,01)</errorConditionFormula>
        <errorMessage>The patient's date of birth must be on or after 1st January 1900.</errorMessage>
    </validationRules>
</CustomObject>